<resources>
    <string name="app_name">TeamMate</string>
    <string name="logo">TEAMMATE</string>
    <string name="signIn_id">아이디 찾기</string>
    <string name="signIn_id_et">Email</string>
    <string name="signIn_pw">Password</string>
    <string name="signIn_pw_et">비밀번호를 입력해주세요.</string>
    <string name="signIn_login">로그인</string>
    <string name="signIn_signup">회원가입</string>
    <string name="toast_msg_noinput">입력되지 않은 정보가 있습니다.</string>
    <string name="toast_msg_idpqErr">ID/PW를 확인해주세요.</string>
    <string name="signup_name">Username</string>
    <string name="signup_name_et">이름을 입력해주세요.</string>
    <string name="cancle">CANCLE</string>
    <string name="back">Back</string>
    <string name="share">Share</string>
    <string name="post_content">게시글 내용</string>
    <string name="title">React 개발자 모집 공고</string>
    <string name="chat_title">채팅</string>
    <string name="match_activity_btn_cancel">취소</string>
    <string name="match_activity_btn_select">선택하기</string>
    <string name="match_deleted_alert_dialog_tv_text">삭제된 게시물입니다</string>
    <string name="match_deleted_alert_dialog_btn_confirm">확인</string>
    <string name="match_detail_bottom_sheet_btn_call_match">매치 신청하기</string>
    <string name="match_filter_category_tv_area">지역</string>
    <string name="match_filter_category_tv_game">경기 종목</string>
    <string name="match_filter_category_btn_cancel">모두 취소</string>
    <string name="match_filter_category_btn_search">결과보기</string>
    <string name="match_fragment_tv_filter">전체 글</string>
    <string name="match_fragment_btn_filter">필터</string>
    <string name="match_fragment_tv_empty">선택된 정보가 없습니다!</string>
    <string name="match_number_btn_cancel">취소</string>
    <string name="match_number_btn_save">확인</string>
    <string name="match_number_person">명</string>
    <string name="match_sort_bottom_sheet_textView2">최근 등록순</string>
    <string name="match_sort_bottom_sheet_textView3">가까운 거리순</string>
    <string name="match_time_btn_cancel">취소</string>
    <string name="match_time_btn_save">확인</string>
    <string name="match_writing_activity_tv_dialog_info">매치 글쓰기</string>
    <string name="match_detail_tv_arena_title">[종목] 일정</string>
    <string name="match_detail_tv_arena_title2">장소</string>
    <string name="match_detail_tv_view_count">10</string>
    <string name="match_detail_btn_call_match">매치 신청하기</string>
    <string name="match_writing_activity_team_title">팀명</string>
    <string name="match_writing_activity_et_team_name">팀명을 입력해주세요.</string>
    <string name="match_writing_activity_sports">종목</string>
    <string name="match_writing_activity_schedule">일정</string>
    <string name="match_writing_activity_tv_month_date">10월 10일 (화)</string>
    <string name="match_writing_activity_tv_time">오전 10:00</string>
    <string name="match_writing_activity_personnel">인원</string>
    <string name="match_writing_activity_tv_team_number1">0</string>
    <string name="match_writing_activity_vs">VS</string>
    <string name="match_writing_activity_location">위치</string>
    <string name="match_writing_activity_gender">성별</string>
    <string name="match_writing_activity_skill">실력</string>
    <string name="match_writing_activity_dues">회비</string>
    <string name="match_writing_activity_et_entry_fee">5000</string>
    <string name="match_writing_activity_detail">내용</string>
    <string name="match_writing_et_content">내용을 입력해 주세요.</string>
    <string name="match_writing_textView4">사진</string>
    <string name="match_writing_tv_add_image">사진등록</string>
    <string name="match_writing_btn_submit">등록하기</string>
    <string name="sign_up_et_hint_Username">Input username</string>
    <string name="sign_up_et_hint_phone_number">Input phone number</string>
    <string name="sign_up_tv_username">Username</string>
    <string name="sign_up_tv_phone_number">Phone number</string>
    <string name="sign_up_tv_Username_description">Username은 최소 2자리 최대 8자리로 구성됩니다.</string>
    <string name="sign_up_tv_phone_number_description">매칭에 사용될 핸드폰 번호를 입력해주세요.</string>
    <string name="sign_up_description">Matching Manager를 사용 하기 위해\n추가정보를 입력해주세요.</string>
    <string name="sign_up_btn">SIGN UP</string>
    <string name="cancel_btn">CANCEL</string>
    <string name="sign_in_continue_with_google">Continue With Google</string>
    <string name="default_web_client_id">677718539523-47ds99rnc0eupphgjm4rnbmkojntg506.apps.googleusercontent.com</string>
    <string name="main_home">Home</string>
    <string name="main_match">Match</string>
    <string name="main_calendar">Calendar</string>
    <string name="main_team">Team</string>
    <string name="main_mypage">MyPage</string>
    <string name="my_profile">프로필</string>
    <string name="my_btn_Sign_Out">SIGN OUT</string>
    <string name="my_test_username">봉선동손흥민</string>
    <string name="my_bookmark">관심목록</string>
    <string name="my_test_real_name">추민수</string>
    <string name="my_test_phone_number">01028179282</string>
    <string name="my_test_email">sonny@gmail.com</string>
    <string name="dialog_edit_location">location</string>
    <string name="dialog_edit_nickname">nickname</string>
    <string name="dialog_edit_id">id</string>
    <string name="dialog_edit_btn_save">저장</string>
    <string name="dialog_edit_btn_cancel">취소</string>
    <string name="toolbar_area">area</string>
    <string name="toolbar_alarm">alarm</string>
    <string name="toolbar_team">용병 모집/신청</string>
    <string name="toolbar_my_page">마이 페이지</string>
    <string name="toolbar_match">경기 매칭</string>
    <string name="toolbar_calendar">일정 관리</string>
    <string name="toolbar_notification">공지사항</string>
    <string name="alarm">알림</string>
    <string name="alarm_no_alarm">받은 알림 내역이 없습니다.</string>
    <string name="alarm_recyclerview_title">%에 지원되었습니다.</string>
    <string name="alarm_recyclerview_user_text">User : </string>
    <string name="alarm_recyclerview_phone_number_text">Phone : </string>
    <string name="team_add_activity_recruit">팀원모집 글쓰기</string>
    <string name="team_add_activity_application">팀원신청 글쓰기</string>
    <string name="team_add_activity_team_name">팀이름</string>
    <string name="team_add_activity_male">남성</string>
    <string name="team_add_activity_female">여성</string>
    <string name="team_add_activity_mix">혼성</string>
    <string name="my_number_btn_cancel">취소</string>
    <string name="my_number_btn_save">확인</string>
    <string name="my_number_number">명</string>
    <string name="my_team_activity_dialog_info">용병 모집/신청 게시글</string>
    <string name="my_team_activity_recruit">모집</string>
    <string name="my_team_activity_application">신청</string>
    <string name="my_bookmark_activity_match">매치</string>
    <string name="my_bookmark_activity_recruit">용병모집</string>
    <string name="my_bookmark_activity_apply_recruit">모집</string>
    <string name="my_match_edit_activity_team">팀명</string>
    <string name="my_match_edit_activity_et_team_name">팀명을 입력해주세요.</string>
    <string name="my_match_edit_activity_sports">종목</string>
    <string name="my_match_edit_activity_schedule">일정</string>
    <string name="my_match_edit_activity_tv_month_date">10월 10일 (화)</string>
    <string name="my_match_edit_activity_tv_time">오전 10:00</string>
    <string name="my_match_edit_activity_personnel">인원</string>
    <string name="my_match_edit_activity_tv_team_number1">0</string>
    <string name="my_match_edit_activity_vs">VS</string>
    <string name="my_match_edit_activity_location">위치</string>
    <string name="my_match_edit_activity_gender">성별</string>
    <string name="my_match_edit_activity_skill">실력</string>
    <string name="my_match_edit_activity_dues">회비</string>
    <string name="my_match_edit_activity_et_entry_fee">5000</string>
    <string name="my_match_edit_activity_detail">내용</string>
    <string name="my_match_edit_activity_et_content">내용을 입력해 주세요.</string>
    <string name="my_match_edit_activity_textView4">사진</string>
    <string name="my_match_edit_activity_tv_add_image">사진등록</string>
    <string name="my_match_edit_activity_btn_submit">등록하기</string>
    <string name="team_age_btn_cancel">취소</string>
    <string name="team_age_btn_save">확인</string>
    <string name="team_age_tv_age">살</string>
    <string name="team_calender_btn_cancel">취소</string>
    <string name="team_calender_btn_select">선택하기</string>
    <string name="team_calender_activity_tv_title">제목</string>
    <string name="team_calender_activity_tv_title2">모집분야</string>
    <string name="team_calender_activity_btn_submit">신청하기</string>
    <string name="team_calender_activity_tv_view_count">10</string>
    <string name="team_filter_category_tv_area">지역</string>
    <string name="team_filter_category_tv_game">경기 종목</string>
    <string name="team_filter_category_btn_cancel">모두 취소</string>
    <string name="team_filter_category_btn_search">결과보기</string>
    <string name="team_fragment_tv_filter">전체 글</string>
    <string name="team_fragment_btn_filter">필터</string>
    <string name="team_number_btn_cancel">취소</string>
    <string name="team_number_btn_save">확인</string>
    <string name="team_number_tv_personnel">명</string>
    <string name="team_time_btn_cancel">취소</string>
    <string name="team_time_btn_save">확인</string>
    <string name="team_writing_activity_">확인</string>
    <string name="team_writing_activity_title">제목</string>
    <string name="team_writing_activity_term">모집기간</string>
    <string name="team_writing_activity_tv_month_date">10월 10일 (화)</string>
    <string name="team_writing_activity_tv_time">오전 10:00</string>
    <string name="team_writing_activity_personnel">인원</string>
    <string name="team_writing_activity_tv_team_number1">0</string>
    <string name="team_writing_activity_tv_age">살</string>
    <string name="team_writing_activity_age1">나이</string>
    <string name="team_writing_activity_vs">VS</string>
    <string name="team_writing_activity_field">모집분야</string>
    <string name="team_writing_activity_gender">성별</string>
    <string name="team_writing_activity_skill">실력</string>
    <string name="team_writing_activity_dues">회비</string>
    <string name="team_writing_activity_et_entry_fee">5000</string>
    <string name="team_writing_activity_detail">내용</string>
    <string name="team_writing_activity_et_content">내용을 입력해 주세요.</string>
    <string name="team_writing_activity_textView4">사진</string>
    <string name="team_writing_activity_tv_add_image">사진등록</string>
    <string name="team_writing_activity_btn_submit">등록하기</string>
    <string name="team_writing_activity_team_name">팀명</string>
    <string name="team_writing_activity_et_team_name">팀 이름을 입력 해 주세요.</string>
    <string name="team_writing_activity_tv_application_time">일정</string>
    <string name="home_tv_recent_post">최근 게시글</string>
    <string name="home_tv_announcement">HOT 게시물</string>
    <string name="home_tv_more_information">더보기</string>
    <string name="home_tv_title_match">추천 게시물</string>
    <string name="home_tv_title_team">팀원 모집/신청</string>
    <string name="home_test_announcement">HOT 게시물 타이틀이 들어갈 자리입니다.</string>
    <string name="announcement_tv_title">공지사항</string>
    <string name="announcement_btn_close">CLOSE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="common_btn_submit">확인</string>
    <string name="common_btn_cancel">취소</string>
    <string name="team_item_type">용병모집</string>
    <string name="team_writing">용병 모집/신청 게시글</string>
    <string name="team_item_number">2명</string>
    <string name="team_item_gender">남성</string>
    <string name="talent_major">안드로이드</string>
    <string name="talent_name">이름</string>
    <string name="talent_stack">#React #Kotlin #Typescript #AWS</string>
    <string name="team_detail_team">작성자</string>
    <string name="team_detail_view_count">5</string>
    <string name="match_detail_time">5시간 전</string>
    <string name="match_detail_description">글 내용</string>
    <string name="my_match_detail_activity_tv_view_count">10</string>
</resources>