<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="140dp">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_arena"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:background="@color/common_selected"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_arena_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/talent_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_arena_address"
                app:layout_constraintStart_toEndOf="@id/iv_arena"
                app:layout_constraintTop_toTopOf="@id/iv_arena"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/tv_arena_address"
                android:layout_width="85dp"
                android:layout_height="13dp"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:text="@string/talent_major"
                android:textSize="9sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                tools:layout_editor_absoluteY="87dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="74dp"
                android:layout_height="19dp"
                android:text="@string/talent_stack"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/iv_arena"
                app:layout_constraintStart_toStartOf="@+id/tv_arena_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_arena_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>