<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".NotificationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_notification"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/skyBlue"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_back"
                android:onClick="onNotificationBackButtonClick"
                android:contentDescription="@string/back" />

            <TextView
                android:id="@+id/tv_toolbar_title"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/black"
                android:text="@string/alarm"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textSize="20dp" />

            <ImageButton
                android:id="@+id/btn_notification"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:onClick="onNotificationEnableButtonClick"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_notification" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_notification"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_notification"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/activity_notification_recyclerview_item" />

    <TextView
        android:id="@+id/tv_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/rv_notification"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/alarm_no_alarm"
        android:textColor="@color/black"
        android:textSize="20sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>